--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Processor</title>
+    <title>Image Format UNS</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -82,7 +82,7 @@
     </style>
 </head>
 <body>
-    <h1>Image Processor</h1>
+    <h1>Image Processor UNS</h1>
     <form id="uploadForm" method="POST" enctype="multipart/form-data">
         <!-- Input untuk Nama File -->
         <div class="upload-container">
@@ -114,37 +114,60 @@
 
     <!-- Tempat menampilkan output -->
     <div id="output"></div>
+    <div id="timer"></div>
 
     <script>
         const dropArea = document.getElementById('drop-area');
         const fileInput = document.getElementById('images');
         const fileList = document.getElementById('file-names');
         const outputDiv = document.getElementById('output');
+           
+        document.addEventListener('click', (event) => {
+        if (event.target && event.target.id === 'download-link') {
+            // Tampilkan timer di dalam div #timer
+            const timerDiv = document.getElementById('timer');
+            let secondsLeft = 10;
 
-        function rundelete() {
-        // Pastikan tombol memulai proses penghapusan file
-        if (confirm('Are you sure you want to clear all uploaded and processed files?')) {
-            fetch('delete_files.php?files=1&processed=1', {
-                method: 'GET'
-            })
-            .then(response => {
-                if (response.ok) {
-                    return response.text(); // Jika ingin menangkap respons dari server
+            timerDiv.textContent = `Deleting files in ${secondsLeft} seconds...`;
+
+            // Jalankan countdown timer
+            const countdown = setInterval(() => {
+                secondsLeft--;
+                if (secondsLeft > 0) {
+                    timerDiv.textContent = `Deleting files in ${secondsLeft} seconds...`;
                 } else {
-                    throw new Error('Failed to delete files. Please try again.');
+                    timerDiv.textContent = 'Deleting files now...';
+                    clearInterval(countdown);
+
+                    // Panggil fungsi rundelete untuk menghapus file
+                    rundelete();
                 }
-            })
-            .then(data => {
-                console.log(data); // Output untuk debug (bisa dihapus setelah produksi)
-                alert('Files successfully cleared!');
-                location.reload(); // Reload halaman setelah proses selesai
-            })
-            .catch(error => {
-                console.error(error);
-                alert('An error occurred while clearing files. Check console for details.');
-            });
+            }, 1000); // Interval 1 detik
         }
+    });
+
+    function rundelete() {
+        // Lakukan penghapusan file tanpa timer
+        fetch('delete_files.php?files=1&processed=1', {
+            method: 'GET'
+        })
+        .then(response => {
+            if (response.ok) {
+                return response.text();
+            } else {
+                throw new Error('Failed to delete files.');
+            }
+        })
+        .then(data => {
+            console.log(data); // Debugging, bisa dihapus setelah selesai
+            location.reload(); // Reload halaman setelah proses selesai
+        })
+        .catch(error => {
+            console.error(error); // Debugging, bisa dihapus setelah selesai
+        });
     }
+
+
 
         // Menambahkan drag-and-drop functionality
         dropArea.addEventListener('dragover', (event) => {
