--- a/index.html
+++ b/index.html
@@ -116,113 +116,8 @@
     <div id="output"></div>
     <div id="timer"></div>
 
-    <script>
-        const dropArea = document.getElementById('drop-area');
-        const fileInput = document.getElementById('images');
-        const fileList = document.getElementById('file-names');
-        const outputDiv = document.getElementById('output');
-           
-        document.addEventListener('click', (event) => {
-        if (event.target && event.target.id === 'download-link') {
-            // Tampilkan timer di dalam div #timer
-            const timerDiv = document.getElementById('timer');
-            let secondsLeft = 10;
-
-            timerDiv.textContent = `Deleting files in ${secondsLeft} seconds...`;
-
-            // Jalankan countdown timer
-            const countdown = setInterval(() => {
-                secondsLeft--;
-                if (secondsLeft > 0) {
-                    timerDiv.textContent = `Deleting files in ${secondsLeft} seconds...`;
-                } else {
-                    timerDiv.textContent = 'Deleting files now...';
-                    clearInterval(countdown);
-
-                    // Panggil fungsi rundelete untuk menghapus file
-                    rundelete();
-                }
-            }, 1000); // Interval 1 detik
-        }
-    });
-
-    function rundelete() {
-        // Lakukan penghapusan file tanpa timer
-        fetch('delete_files.php?files=1&processed=1', {
-            method: 'GET'
-        })
-        .then(response => {
-            if (response.ok) {
-                return response.text();
-            } else {
-                throw new Error('Failed to delete files.');
-            }
-        })
-        .then(data => {
-            console.log(data); // Debugging, bisa dihapus setelah selesai
-            location.reload(); // Reload halaman setelah proses selesai
-        })
-        .catch(error => {
-            console.error(error); // Debugging, bisa dihapus setelah selesai
-        });
-    }
+    <script src="script.js"></script>
 
 
-
-        // Menambahkan drag-and-drop functionality
-        dropArea.addEventListener('dragover', (event) => {
-            event.preventDefault();
-            dropArea.classList.add('dragover');
-        });
-
-        dropArea.addEventListener('dragleave', () => {
-            dropArea.classList.remove('dragover');
-        });
-
-        dropArea.addEventListener('drop', (event) => {
-            event.preventDefault();
-            dropArea.classList.remove('dragover');
-            const files = event.dataTransfer.files;
-            updateFileList(files);
-        });
-
-        // Update file list dan input files
-        function updateFileList(files) {
-            const dataTransfer = new DataTransfer();
-            fileList.innerHTML = '';
-            for (const file of files) {
-                dataTransfer.items.add(file);
-                const li = document.createElement('li');
-                li.textContent = file.name;
-                fileList.appendChild(li);
-            }
-            fileInput.files = dataTransfer.files;
-        }
-
-        // Handle manual file selection
-        fileInput.addEventListener('change', (event) => {
-            updateFileList(fileInput.files);
-        });
-
-        // Fungsi untuk memproses gambar menggunakan AJAX
-        function processImages() {
-            const formData = new FormData(document.getElementById('uploadForm'));
-
-            // Menggunakan AJAX untuk mengirim data ke process.php
-            const xhr = new XMLHttpRequest();
-            xhr.open('POST', 'process.php', true);
-
-            xhr.onload = function() {
-                if (xhr.status === 200) {
-                    // Menampilkan output dari process.php di halaman
-                    outputDiv.innerHTML = xhr.responseText;
-                } else {
-                    outputDiv.innerHTML = 'Error processing images!';
-                }
-            };
-
-            xhr.send(formData);
-        }
-    </script>
 </body>
 </html>
